cmake_minimum_required(VERSION 3.31)
project(week4_lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(week4_lab2 main.cpp
        cmake-build-debug/problem13.cpp
        cmake-build-debug/problem14.cpp
        cmake-build-debug/problem15.cpp
        cmake-build-debug/problem16.cpp
        cmake-build-debug/problem17.cpp
        cmake-build-debug/problem18.cpp
        cmake-build-debug/problem19.cpp
        cmake-build-debug/problem20.cpp
        cmake-build-debug/problem19_Switch.cpp
        cmake-build-debug/problem21.cpp
        cmake-build-debug/problem22.cpp
        cmake-build-debug/problem23.cpp
        cmake-build-debug/problem24.cpp)
